# Messenger

./: .gitignore  CHANGES_SUMMARY.md  DATABASE_SETUP.md  DEPLOY.md  DEPLOY_VPS_QUICKSTART.md  MIGRATION_STATUS.md  QUICK_START.md  README.md  RUN_DESKTOP.md  check-db.js  deploy.sh  ecosystem.config.js  keep_backend_alive.py  package-lock.json  package.json  start-desktop.bat
apps/desktop/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/components/: AccountSwitcher.module.css  AccountSwitcher.tsx  CallModal.module.css  CallModal.tsx  ChatList.module.css  ChatList.tsx  ChatListItem.module.css  ChatListItem.tsx  ChatMenu.module.css  ChatMenu.tsx  ChatWindow.module.css  ChatWindow.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  ImageViewer.module.css  IncomingCallModal.module.css  IncomingCallModal.tsx  Message.module.css  Message.tsx  NewChatModal.module.css  NewChatModal.tsx  Sidebar.module.css
apps/desktop/src/config/: network.ts
apps/desktop/src/layouts/: MainLayout.module.css
apps/desktop/src/pages/: ChatPage.tsx  ChatsPage.module.css  ChatsPage.tsx  FeedPage.module.css  FeedPage.tsx  LoginPage.module.css  LoginPage.tsx  ProfilePage.module.css  ProfilePage.tsx  (+4 more)
apps/mobile/: app.json  package.json
apps/mobile/app/: index.tsx
apps/server/: .env.example  package.json
apps/server/prisma/: schema.prisma
apps/server/src/: db.ts  index.ts
apps/web/: .env.example  index.html  package.json
apps/web/src/: App.tsx  main.tsx
(+87 files in other folders)
