[package]
name = "messenger-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-remove-dir", "fs-create-dir", "fs-write-file", "fs-copy-file", "fs-remove-file", "fs-rename-file", "fs-exists", "fs-read-file", "fs-read-dir", "window-all", "http-all", "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
